# s_shaped_growth

./: Cargo.toml  README.md
src/: main.rs
